# tipsy-encoder

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: code-checks.yml  run-tests.yml
include/tipsy/: binary-to-float.h  protocol.h  tipsy.h  version.h
test/: binary.cpp  main.cpp  protocol.cpp
